# mt5-trading-bot

./: .gitignore  CRITICAL_REVIEW.md  MQL5_ARCHITECTURE.md  PROJECT_PLAN.md  README.md  REBUILD_EA_BOT_INSTRUCTIONS.md  REQUIREMENTS.md  config.example.yaml  pyproject.toml  requirements.txt
data/: README.md
docs/: security_audit.md
mt5-trading-bot/: README.md  UltimateEA.mq5  main.py  requirements.txt  test_mt5_connection.py
mt5-trading-bot/mt5/: __init__.py  connection.py
mt5-trading-bot/tests/: BacktestConfig.mq5  __init__.py  test_monitoring_performance.py  test_risk_limits.py
mt5-trading-bot/tools/: multicurrency.json  run_backtest.py
src/: __init__.py
src/ai/: __init__.py  config.py  datasets.py  export.py  features.py  inference.py  losses.py  models.py  train.py  utils.py
src/backtesting/: __init__.py  config.py  data_loader.py  engine.py  metrics.py  optimizer.py  walkforward.py
src/core/: __init__.py  config.py  engine.py  enums.py  runtime.py  strategy.py  types.py
src/data/: __init__.py  market_data_provider.py
src/indicators/: __init__.py  technicals.py
src/monitoring/: __init__.py  config.py  events.py  example.py  logger.py  manager.py  metrics.py  performance.py  rules.py  trade_logger.py
src/mt5/: __init__.py  account.py  app.py  config.py  connection.py  exceptions.py  market_data.py  orders.py
src/risk/: __init__.py  config.py  exceptions.py  limits.py  position_sizing.py  risk_engine.py  state.py  (+1 more)
tests/: conftest.py  test_backtesting.py  test_mt5_integration.py  test_safety_controller.py
tools/: run_backtest.py
(+94 files in other folders)
