[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mt5-trading-bot"
version = "0.1.0"
description = "MetaTrader 5 auto trading bot core integration"
readme = "README.md"
authors = [{ name = "AI Agents" }]
requires-python = ">=3.10"
dependencies = [
    "MetaTrader5>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.11",
]

[tool.setuptools.packages.find]
where = ["src"]
