[project]
name = "mt5-trading-bot"
version = "0.1.0"
description = "MetaTrader 5 trading bot safety framework"
authors = ["AI Agents <agents@example.com>"]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
addopts = "-q"
